--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
     </header>
     <main>
         <form action="" method="post">
-            <p><label for="nome">Informe a data:</label><input type="date" name="" id="nime"></p>
-            <p><label for="nome">Informe o nome da criança:</label><input type="text" name="" id="nime"></p>
+            <section id="cabecalho-questionario">
+                <p><label for="nome">Informe a data:</label><input type="date" name="" id="nime"></p>
+                <p><label for="nome">Informe o nome da criança:</label><input type="text" name="" id="nime"></p>
 
-            <p><label for="categoria">Em qual categoria você se enquadra?</label><select name="" id="categoria"></select></p>
-            <input type="radio" name="categoria" id="" value="catego">
-            <div id="questionario">
+                <p><label for="categoria">Em qual categoria você se enquadra?</label><select name="" id="categoria" ></select></p>
 
-            </div>
+            </section>
+            
+            
+            <section id="questionario"></section>
 
 
-            <input type="submit" value="">
+            <input type="submit" value="Enviar Dados" class="botao">
+            <input type="reset" value="Limpar Dados" class="botao">
         </form>
 
     </main>
