--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <main>
         <form action="" method="post">
             <section id="cabecalho-questionario">
-                <p><label for="nome">Informe a data:</label><input type="date" name="" id="nime"></p>
-                <p><label for="nome">Informe o nome da criança:</label><input type="text" name="" id="nime"></p>
+                <p><label for="data">Informe a data:</label><input type="date" name="data" id="data" required></p>
+                <p><label for="nome">Informe o nome da criança:</label><input type="text" name="nome-completo" id="nome" required></p>
 
-                <p><label for="categoria">Em qual categoria você se enquadra?</label><select name="" id="categoria" ></select></p>
+                <p><label for="categoria">Em qual categoria você se enquadra?</label><select name="avaliador" id="categoria" required ></select></p>
 
             </section>
             
