--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
             
             <section id="questionario"></section>
 
-
-            <input type="submit" value="Enviar Dados" class="botao">
-            <input type="reset" value="Limpar Dados" class="botao">
+            <div class="botoes">
+                <input type="submit" value="Enviar Dados" class="botao">
+                <input type="reset" value="Limpar Dados" class="botao" onclick="iniciar()">
+            </div>
+            
         </form>
 
     </main>
