--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </header>
     <main>
-        <form action="https://taleshen-5ziem32mbb4549t9.socketxp.com/enviar" method="post">
+        <form id="form-put"  action="https://h4p465yqsf.execute-api.sa-east-1.amazonaws.com/items" method="post">
             <section id="cabecalho-questionario">
                 <p><label for="data">Informe a data:</label><input type="date" name="data" id="data" required></p>
                 <p><label for="nome">Informe o nome da criança:</label><input type="text" name="nome-completo" id="nome" required></p>
@@ -35,6 +35,7 @@
     </main>
     <script src="javascript/dados.js"></script>
     <script src="javascript/principal.js"></script>
+    <script src="javascript/capturaDados.js"></script>
 </body>
 </html>
-<label for=""></label>
+
